@@ -74,3 +74,4 @@
 -Minimap 50%
 #2020.05.05
 -Minimap 90%
+-Minimap Finished
